Responvie nav. Need to fix burger visibility in mobile view

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
 }
 html {
 	--color-1: rgb(255, 255, 255);
+	--color-2: rgb(0, 0, 0);
 }
 
 header {
@@ -12,8 +13,8 @@ header {
 	height: 100vh;
 	width: 100%;
 	background-image: url(/img/athlete-bike-black-and-white-cycle-260409.jpg);
-	background-position: center;
 	background-size: cover;
+	background-repeat: no-repeat;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -45,6 +46,25 @@ header {
 	text-transform: uppercase;
 	margin-left: 6rem;
 }
+.burger-btn {
+	position: absolute;
+	top: 0;
+	right: 0;
+	margin: 1.5rem 2rem;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+	width: 3rem;
+	height: 2rem;
+	display: none;
+}
+.burger-btn span {
+	display: block;
+	background-color: #fff;
+	width: 100%;
+	height: 3px;
+}
+
 header h1 {
 	color: var(--color-1);
 	font-size: 4.5rem;
@@ -52,4 +72,41 @@ header h1 {
 	text-align: center;
 	font-family: "roboto", sans-serif;
 	letter-spacing: 8px;
+}
+#mobile-nav {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: var(--color-2);
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	display:none;
+}
+#mobile-nav .logo{
+	margin:0;
+}
+#mobile-nav ul{
+	display:flex;
+	flex-direction: column;
+	margin-bottom:15rem;
+}
+#mobile-nav li{
+	list-style: none;
+}
+#mobile-nav a{
+	display:block;
+	color:var(--color-1);
+	text-decoration: none;
+	text-transform: uppercase;
+	font-size: 1.5rem;
+	padding: 2rem 2rem;
+}
+ ul a:hover{
+	text-decoration: underline;
+}
+#mobile-nav:target{
+	display:flex;
 }
